src/Services/adminServices/finyearServices/k8s/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finyear-api
  labels:
    name: finyear-api
