src/Services/adminServices/finyearServices/k8s/rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: finyear-api
  labels:
    name: finyear-api
    environment: production
