src/Services/adminServices/finyearServices/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finyear-api
  namespace: finyear-api
  labels:
    app: finyear-api
spec:
  type: LoadBalancer
  selector:
    app: finyear-api
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  - name: https
    port: 443
    targetPort: 5001
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
apiVersion: v1
kind: Service
metadata:
  name: finyear-api-internal
  namespace: finyear-api
  labels:
    app: finyear-api
spec:
  type: ClusterIP
  selector:
    app: finyear-api
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
  - name: https
    port: 5001
    targetPort: 5001
    protocol: TCP
